Overlapping content in conversation list has been fixed and max width in span content in conversation window has been initialized

--- a/src/styles/tabs/feed/index.css
+++ b/src/styles/tabs/feed/index.css
@@ -357,6 +357,7 @@
     justify-content: center;
     align-items: flex-start;
     gap: 2px;
+    overflow-x: hidden;
 }
 
 .span_messages_list_name:first-of-type{
@@ -366,6 +367,7 @@
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+    text-align: left;
 }
 
 .span_messages_list_name:nth-of-type(2){
@@ -374,6 +376,7 @@
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+    text-align: left;
 }
 
 .span_messages_list_name:last-of-type{
@@ -383,6 +386,7 @@
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+    text-align: left;
 }
 
 #div_messages_list_empty_container{
